maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: method Rand has return statement; needs result type
 	return Math.random() * ( n )
        ^